--- a/.gitignore
+++ b/.gitignore
@@ -337,3 +337,11 @@ ASALocalRun/
 # Local History for Visual Studio
 .localhistory/
 
+(1,12)
+(2,24)
+(45,256)
+(100,200)
+(3,1)
+(567,12)
+(235,89345)
+chapter-10-drill/output-points.txt
